# Warfrost

./: .gitattributes  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.yaml
.github/workflows/: docker.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/game/: game.rs  mod.rs  network.rs  networking.rs  pathfind.rs  players.rs  units.rs  warfrost.rs
backend/src/network/: handlers.rs  mod.rs  server.rs  utils.rs  websocket.rs
backend/src/pathfind/: mod.rs  models.rs
design/: map.blend
docker/: README.md  backend-clear.sh  backend-init.sh  backend-reset.sh  backend.Dockerfile  docker-compose.yaml  frontend-init.sh  frontend-reset.sh  network-init.sh  warfrost-init.sh  warfrost-stop.sh
docker/backend/: Dockerfile  backend-init.sh
docker/frontend/: Dockerfile  Dockerfile-nginx  Dockerfile-node  frontend-init.sh  frontend-stop.sh
frontend/: .eslintrc.yml  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  rollup.config.dev.mjs  rollup.config.dist.mjs
frontend/src/: game.ts
frontend/src/network/: events.ts  main.ts  network.ts  socket.ts  websocket.ts
frontend/src/warfrost/: handler.ts  handlers.ts  models.ts  pathfind.ts  unit.ts  (+3 more)
kubernetes/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml
proof-of-concept/: README.md
proof-of-concept/backend/: Cargo.toml
proof-of-concept/frontend/: index.html  main.ts  package-lock.json  package.json  run.sh
proof-of-concept/websocket/: .gitignore  client.js  package-lock.json  package.json
(+3 files in other folders)
