[package]
name = "warfrost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tungstenite = "0.15.0"
tokio-tungstenite = "*"
futures-util = "0.3.28"
futures = "0.3.28"
