[package]
name = "warfrost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
regex = "1.9.1"
simple-websockets = "0.1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
